[build-system]
requires = ["flit_core >=3.11,<5"]
build-backend = "flit_core.buildapi"

[project]
name = "micro_http_server"
version = "0.1.1"
description = "a simple HTTP server using functional principles for Micropython and CPython"
readme = "README.md"
authors = [{ name = "Topi Kanerva" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: MicroPython",
]
keywords = ["httpserver", "functional", "asyncio"]
dependencies = [
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["black"]

[project.urls]
Homepage = "https://github.com/tkanerva/micro_http_server"
